Added Selenium dependencies and failsafe configuration.